Revamp skill sections and change animation; Fix minor issues (header z-index, portfolio thumbnail)

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,7 +34,7 @@ body {
     overflow: hidden;
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
     background-color: var(--colorAccent);
 }
 
@@ -175,11 +175,10 @@ body {
 }
 
 .projects img {
-    max-width: 300px;
-    max-height: 200px;
+    width: 300px;
+    height: 280px;
     border-radius: 25px;
-    width: auto;
-    height: auto;
+    overflow: hidden;
     display: inline;
     margin: 0 auto;
 }
@@ -265,22 +264,14 @@ body {
     border: 2px solid white;
     background-color: transparent;
     width: 75vw;
-    max-width: 725px;
     border-radius: 24px;
     padding: 1.5vw;
     gap: 15px;
-    transition: transform 0.7s;
 }
-
-.skills .skills-container:hover {
-    transform: scale(1.05);
-}
-
 
 .skills .skills-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(50px, 150px));
-    grid-template-rows: repeat(auto, 50px);
     gap: 20px;
     justify-content: center;
     text-align: center;
@@ -382,6 +373,11 @@ body {
     border: 2px solid white;
     background-color: transparent;
     color: lightgrey;
+    animation-duration: 0.7s;
+}
+
+.language-label:hover {
+    background-color: var(--colorAccent);
 }
 
 .symbol {
